Adding problem description

--- a/world_cup_prediction.ipynb
+++ b/world_cup_prediction.ipynb
@@ -21,7 +21,9 @@
    "cell_type": "markdown",
    "id": "a691fd27-b7d5-4859-944e-9662fdf5cc93",
    "metadata": {},
-   "source": []
+   "source": [
+    "For this project we would like to take the most recent world cup data (including each team that is playing in the tournament and the different statistical evaluations for these teams) and use this data to predict the percentage for success that a user imputed team has.  The user will be able to input a specific team and different attack and defense ratings for that team and the model will be able to remove that team from the dataset and predict the success percentage for that team given the inputed data.  This will allow a person to see the success percentages of their chosen team given its current data or in a hypothetical situation where its attack or defense is better than it actually is."
+   ]
   },
   {
    "cell_type": "markdown",
