adding preliminary backend code

--- a/world_cup_prediction.ipynb
+++ b/world_cup_prediction.ipynb
@@ -134,7 +134,9 @@
    "id": "3fc7b3e4-bcc2-47b0-a8eb-547a100a9f25",
    "metadata": {},
    "source": [
-    "[1] Deploying Machine Learning Model Using Heroku. https://datamahadev.com/deploying-machine-learning-model-using-heroku/"
+    "[1] Deploying Machine Learning Model Using Heroku. https://datamahadev.com/deploying-machine-learning-model-using-heroku/\n",
+    "\n",
+    "[2] Using Machine Learning to Simulate World Cup Matches. https://towardsdatascience.com/using-machine-learning-to-simulate-world-cup-matches-959e24d0731"
    ]
   }
  ],
