pushing up work on the model

--- a/world_cup_prediction.ipynb
+++ b/world_cup_prediction.ipynb
@@ -2054,11 +2054,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "follow process of above"
+   ]
   },
   {
    "cell_type": "markdown",
