--- a/world_cup_prediction.ipynb
+++ b/world_cup_prediction.ipynb
@@ -5768,7 +5768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 518,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5787,28 +5787,33 @@
     "            predictor.at[0,'def'] = team1WC['def'].get_values()[0] - team2WC['def'].get_values()[0]\n",
     "            predictor.at[0,'ovr'] = team1WC['ovr'].get_values()[0] - team2WC['ovr'].get_values()[0]\n",
     "            predictedVal = lm.predict(predictor)\n",
-    "            predictedVal[predictedVal <= -.1] = -1\n",
-    "            predictedVal[predictedVal >= .1] = 1\n",
-    "            predictedVal[(predictedVal < .1) & (predictedVal > -.1)] = 0\n",
+    "            predictedVal[predictedVal <= -.0000000000001] = -1\n",
+    "            predictedVal[predictedVal >= .0000000000001] = 1\n",
+    "            predictedVal[(predictedVal < .0000000000001) & (predictedVal > -.0000000000001)] = 0\n",
     "            if predictedVal == 1:\n",
     "                # team 1 wins\n",
     "                worldCup.at[team1WC.index[0], 'Points'] += 3\n",
-    "               # worldCup.at[team1WC.index[0], 'Points'] = 0\n",
     "            elif predictedVal == 0:\n",
     "                # draw\n",
     "                worldCup.at[team1WC.index[0], 'Points'] += 1\n",
     "                worldCup.at[team2WC.index[0], 'Points'] += 1\n",
-    "                #worldCup.at[team1WC.index[0], 'Points'] = 0\n",
-    "                #worldCup.at[team2WC.index[0], 'Points'] = 0\n",
     "            else:\n",
     "                # team 2 wins\n",
-    "                worldCup.at[team2WC.index[0], 'Points'] += 3\n",
-    "                #worldCup.at[team2WC.index[0], 'Points'] = 0"
+    "                worldCup.at[team2WC.index[0], 'Points'] += 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 519,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# worldCup['Points'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 520,
    "metadata": {},
    "outputs": [
     {
@@ -5845,7 +5850,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Qatar</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>A</td>\n",
        "      <td>74</td>\n",
        "      <td>74</td>\n",
@@ -5855,7 +5860,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Ecuador</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>A</td>\n",
        "      <td>75</td>\n",
        "      <td>75</td>\n",
@@ -5875,7 +5880,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Senegal</td>\n",
-       "      <td>2</td>\n",
+       "      <td>6</td>\n",
        "      <td>A</td>\n",
        "      <td>78</td>\n",
        "      <td>78</td>\n",
@@ -5985,7 +5990,7 @@
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Tunisia</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>D</td>\n",
        "      <td>76</td>\n",
        "      <td>76</td>\n",
@@ -5995,7 +6000,7 @@
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>Peru</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>D</td>\n",
        "      <td>78</td>\n",
        "      <td>78</td>\n",
@@ -6005,7 +6010,7 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>Spain</td>\n",
-       "      <td>7</td>\n",
+       "      <td>9</td>\n",
        "      <td>E</td>\n",
        "      <td>83</td>\n",
        "      <td>85</td>\n",
@@ -6015,7 +6020,7 @@
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>Germany</td>\n",
-       "      <td>7</td>\n",
+       "      <td>6</td>\n",
        "      <td>E</td>\n",
        "      <td>83</td>\n",
        "      <td>85</td>\n",
@@ -6055,7 +6060,7 @@
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>Canada</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>F</td>\n",
        "      <td>75</td>\n",
        "      <td>73</td>\n",
@@ -6065,7 +6070,7 @@
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>Morocco</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>F</td>\n",
        "      <td>77</td>\n",
        "      <td>77</td>\n",
@@ -6075,7 +6080,7 @@
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>Croatia</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>F</td>\n",
        "      <td>79</td>\n",
        "      <td>79</td>\n",
@@ -6095,7 +6100,7 @@
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>Serbia</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>G</td>\n",
        "      <td>77</td>\n",
        "      <td>77</td>\n",
@@ -6105,7 +6110,7 @@
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>Switzerland</td>\n",
-       "      <td>4</td>\n",
+       "      <td>6</td>\n",
        "      <td>G</td>\n",
        "      <td>80</td>\n",
        "      <td>80</td>\n",
@@ -6135,7 +6140,7 @@
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>Ghana</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>H</td>\n",
        "      <td>72</td>\n",
        "      <td>72</td>\n",
@@ -6155,7 +6160,7 @@
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>Korea Republic</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>H</td>\n",
        "      <td>76</td>\n",
        "      <td>76</td>\n",
@@ -6167,42 +6172,42 @@
        "</div>"
       ],
       "text/plain": [
-       "              Team Points Group  att  mid  def  ovr\n",
-       "0            Qatar      2     A   74   74   74   74\n",
-       "1          Ecuador      2     A   75   75   75   75\n",
-       "2      Netherlands      9     A   81   82   83   82\n",
-       "3          Senegal      2     A   78   78   78   78\n",
-       "4          England      9     B   86   83   83   83\n",
-       "5             Iran      6     B   78   78   78   78\n",
-       "6              USA      3     B   75   75   74   75\n",
-       "7            Wales      0     B   74   74   72   74\n",
-       "8        Argentina      9     C   86   81   81   83\n",
-       "9           Poland      6     C   81   74   75   77\n",
-       "10          Mexico      3     C   80   78   74   77\n",
-       "11    Saudi Arabia      0     C   74   74   74   74\n",
-       "12          France      9     D   85   86   83   85\n",
-       "13         Denmark      6     D   77   78   79   79\n",
-       "14         Tunisia      1     D   76   76   76   76\n",
-       "15            Peru      1     D   78   78   78   78\n",
-       "16           Spain      7     E   83   85   83   84\n",
-       "17         Germany      7     E   83   85   80   85\n",
-       "18           Japan      3     E   77   77   77   77\n",
-       "19      Costa Rica      0     E   75   75   75   75\n",
-       "20         Belgium      9     F   83   82   80   83\n",
-       "21          Canada      1     F   75   73   70   73\n",
-       "22         Morocco      2     F   77   77   77   77\n",
-       "23         Croatia      4     F   79   79   79   79\n",
-       "24          Brazil      9     G   80   80   80   80\n",
-       "25          Serbia      4     G   77   77   77   77\n",
-       "26     Switzerland      4     G   80   80   80   80\n",
-       "27        Cameroon      0     G   75   75   75   75\n",
-       "28        Portugal      9     H   85   83   85   84\n",
-       "29           Ghana      1     H   72   72   72   72\n",
-       "30         Uruguay      6     H   79   79   79   79\n",
-       "31  Korea Republic      1     H   76   76   76   76"
+       "              Team  Points Group  att  mid  def  ovr\n",
+       "0            Qatar       3     A   74   74   74   74\n",
+       "1          Ecuador       0     A   75   75   75   75\n",
+       "2      Netherlands       9     A   81   82   83   82\n",
+       "3          Senegal       6     A   78   78   78   78\n",
+       "4          England       9     B   86   83   83   83\n",
+       "5             Iran       6     B   78   78   78   78\n",
+       "6              USA       3     B   75   75   74   75\n",
+       "7            Wales       0     B   74   74   72   74\n",
+       "8        Argentina       9     C   86   81   81   83\n",
+       "9           Poland       6     C   81   74   75   77\n",
+       "10          Mexico       3     C   80   78   74   77\n",
+       "11    Saudi Arabia       0     C   74   74   74   74\n",
+       "12          France       9     D   85   86   83   85\n",
+       "13         Denmark       6     D   77   78   79   79\n",
+       "14         Tunisia       3     D   76   76   76   76\n",
+       "15            Peru       0     D   78   78   78   78\n",
+       "16           Spain       9     E   83   85   83   84\n",
+       "17         Germany       6     E   83   85   80   85\n",
+       "18           Japan       3     E   77   77   77   77\n",
+       "19      Costa Rica       0     E   75   75   75   75\n",
+       "20         Belgium       9     F   83   82   80   83\n",
+       "21          Canada       3     F   75   73   70   73\n",
+       "22         Morocco       3     F   77   77   77   77\n",
+       "23         Croatia       3     F   79   79   79   79\n",
+       "24          Brazil       9     G   80   80   80   80\n",
+       "25          Serbia       3     G   77   77   77   77\n",
+       "26     Switzerland       6     G   80   80   80   80\n",
+       "27        Cameroon       0     G   75   75   75   75\n",
+       "28        Portugal       9     H   85   83   85   84\n",
+       "29           Ghana       0     H   72   72   72   72\n",
+       "30         Uruguay       6     H   79   79   79   79\n",
+       "31  Korea Republic       3     H   76   76   76   76"
       ]
      },
-     "execution_count": 502,
+     "execution_count": 520,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6214,7 +6219,280 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Running Rest of World Cup after Group Stage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 505,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Points</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>att</th>\n",
+       "      <th>mid</th>\n",
+       "      <th>def</th>\n",
+       "      <th>ovr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Qatar</td>\n",
+       "      <td>2</td>\n",
+       "      <td>A</td>\n",
+       "      <td>74</td>\n",
+       "      <td>74</td>\n",
+       "      <td>74</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ecuador</td>\n",
+       "      <td>2</td>\n",
+       "      <td>A</td>\n",
+       "      <td>75</td>\n",
+       "      <td>75</td>\n",
+       "      <td>75</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>9</td>\n",
+       "      <td>A</td>\n",
+       "      <td>81</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Senegal</td>\n",
+       "      <td>2</td>\n",
+       "      <td>A</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Team Points Group  att  mid  def  ovr\n",
+       "0        Qatar      2     A   74   74   74   74\n",
+       "1      Ecuador      2     A   75   75   75   75\n",
+       "2  Netherlands      9     A   81   82   83   82\n",
+       "3      Senegal      2     A   78   78   78   78"
+      ]
+     },
+     "execution_count": 505,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "worldCup.head(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 521,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pointsMost, pointsSec, ovrMost, ovrSec, topTeam, secTeam = 0, 0, 0, 0, None, None\n",
+    "groupIdx = 0\n",
+    "groupLetter = 'A'\n",
+    "teamsAdvancing = []\n",
+    "for i in range(len(worldCup)):\n",
+    "    currPoints = worldCup.at[i, 'Points']\n",
+    "    currOvr = worldCup.at[i, 'ovr']\n",
+    "    currTeam = worldCup.at[i, 'Team']\n",
+    "    if currPoints > pointsMost:\n",
+    "        pointsMost = currPoints\n",
+    "        ovrMost = currOvr\n",
+    "        topTeam = currTeam\n",
+    "    elif currPoints == pointsMost:\n",
+    "        if currOvr > ovrMost:\n",
+    "            pointsSec = pointsMost\n",
+    "            ovrSec = ovrMost\n",
+    "            secTeam = topTeam\n",
+    "            pointsMost = currPoints\n",
+    "            ovrMost = currOvr\n",
+    "            topTeam = currTeam \n",
+    "    elif currPoints > pointsSec or (currPoints == pointsSec and currOvr > ovrSec):\n",
+    "        pointsSec = currPoints\n",
+    "        ovrSec = currOvr\n",
+    "        secTeam = currTeam\n",
+    "    groupIdx += 1\n",
+    "    if groupIdx == 4:\n",
+    "        newGroup = [topTeam, secTeam]\n",
+    "        teamsAdvancing.append(newGroup)\n",
+    "        groupIdx = 0\n",
+    "        pointsMost, pointsSec, ovrMost, ovrSec, topTeam, secTeam = 0, 0, 0, 0, None, None      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 522,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Netherlands', 'Senegal'],\n",
+       " ['England', 'Iran'],\n",
+       " ['Argentina', 'Poland'],\n",
+       " ['France', 'Denmark'],\n",
+       " ['Spain', 'Germany'],\n",
+       " ['Belgium', 'Croatia'],\n",
+       " ['Brazil', 'Switzerland'],\n",
+       " ['Portugal', 'Uruguay']]"
+      ]
+     },
+     "execution_count": 522,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "teamsAdvancing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 523,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a1 = teamsAdvancing[0][0]\n",
+    "a2 = teamsAdvancing[0][1]\n",
+    "b1 = teamsAdvancing[1][0]\n",
+    "b2 = teamsAdvancing[1][1]\n",
+    "c1 = teamsAdvancing[2][0]\n",
+    "c2 = teamsAdvancing[2][1]\n",
+    "d1 = teamsAdvancing[3][0]\n",
+    "d2 = teamsAdvancing[3][1]\n",
+    "e1 = teamsAdvancing[4][0]\n",
+    "e2 = teamsAdvancing[4][1]\n",
+    "f1 = teamsAdvancing[5][0]\n",
+    "f2 = teamsAdvancing[5][1]\n",
+    "g1 = teamsAdvancing[6][0]\n",
+    "g2 = teamsAdvancing[6][1]\n",
+    "h1 = teamsAdvancing[7][0]\n",
+    "h2 = teamsAdvancing[7][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 529,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulateKnockOutGame(teamName1, teamName2):\n",
+    "    predictor = pd.DataFrame(columns = ['att', 'mid', 'def', 'ovr'])\n",
+    "    team1WC = worldCup[worldCup['Team'] == teamName1]\n",
+    "    team2WC = worldCup[worldCup['Team'] == teamName2]\n",
+    "    predictor.at[0,'att'] = team1WC['att'].get_values()[0] - team2WC['att'].get_values()[0]\n",
+    "    predictor.at[0,'mid'] = team1WC['mid'].get_values()[0] - team2WC['mid'].get_values()[0]\n",
+    "    predictor.at[0,'def'] = team1WC['def'].get_values()[0] - team2WC['def'].get_values()[0]\n",
+    "    predictor.at[0,'ovr'] = team1WC['ovr'].get_values()[0] - team2WC['ovr'].get_values()[0]\n",
+    "    predictedVal = lm.predict(predictor)\n",
+    "    predictedVal[predictedVal <= -.0000000000001] = -1\n",
+    "    predictedVal[predictedVal >= .0000000000001] = 1\n",
+    "    predictedVal[(predictedVal < .0000000000001) & (predictedVal > -.0000000000001)] = 0\n",
+    "    if predictedVal == 1:\n",
+    "        # teamName1 wins\n",
+    "        return teamName1\n",
+    "    elif predictedVal == -1:\n",
+    "        # teamName2 wins\n",
+    "        return teamName2\n",
+    "    else:\n",
+    "        if team1WC['ovr'].get_values()[0] > team2WC['ovr'].get_values()[0]:\n",
+    "            # teamName1 wins in ET/PKs\n",
+    "            return teamName1\n",
+    "        else:\n",
+    "            # teamName2 wins in ET/PKs\n",
+    "            return teamName2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 528,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Argentina\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Left side\n",
+    "# A1 v B2 : C1 v D2\n",
+    "# E1 v F2 : G1 v H2\n",
+    "\n",
+    "# Right side\n",
+    "# D1 v C2 : B1 v A2\n",
+    "# F1 v E2 : H1 v G2 \n",
+    "leftSideTop = [[a1, b2], [c1, d2]]\n",
+    "leftSideBot = [[e1, f2], [g1, h2]]\n",
+    "leftSide = [leftSideTop, leftSideBot]\n",
+    "\n",
+    "rightSideTop = [[d1, c2], [b1, a2]]\n",
+    "rightSideBot = [[f1, e2], [h1, g2]]\n",
+    "rightSide = [rightSideTop, rightSideBot]\n",
+    "knockOut = [leftSide, rightSide]\n",
+    "semis = []\n",
+    "for side in knockOut:\n",
+    "    for quarter in side:\n",
+    "        q1, q2 = None, None\n",
+    "        qIdx = 0\n",
+    "        for game in quarter:\n",
+    "            predictor = pd.DataFrame(columns = ['att', 'mid', 'def', 'ovr'])\n",
+    "            team1 = game[0]\n",
+    "            team2 = game[1]\n",
+    "            winner = simulateKnockOutGame(team1, team2)\n",
+    "            if qIdx == 0:\n",
+    "                q1 = winner\n",
+    "            else:\n",
+    "                toSemis = simulateKnockOutGame(q1, winner)\n",
+    "                semis.append(toSemis)\n",
+    "            qIdx += 1\n",
+    "\n",
+    "final1 = simulateKnockOutGame(semis[0], semis[1])\n",
+    "final2 = simulateKnockOutGame(semis[2], semis[3])\n",
+    "champion = simulateKnockOutGame(final1, final2)\n",
+    "print(champion)"
+   ]
   },
   {
    "cell_type": "markdown",
